# metrinome

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.dev  README.md  README.txt  Research Notes.txt  apache_cfgs_small_sample_results.csv  convertFileNames.py  docker-file.txt  dockerhub-copy.txt  requirements.txt  site.properties
.devcontainer/: devcontainer.json
.github/: .codecov.yml  ActionsRunner.service  service_readme.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  workflow.yml
analysis/: Complexity Analysis.ipynb  Distinguishing Metrics.ipynb  Graph.py  Parameters.py  Regexp Java Class Parser.ipynb  Taylor Series, Reccurences, and Classifier.ipynb  cyclomaticComplexity.py  nPathComplexity.py  pathComplexity.py  paths.py  utils.py
analysis/.ipynb_checkpoints/: Complexity Analysis-checkpoint.ipynb  Empirical Experiments-checkpoint.ipynb  Taylor Series, Reccurences, and Classifier-checkpoint.ipynb
cfgs/simple_test_cfgs/: vlab_cs_ucsb_test_SimpleExample_test4_0_basic.dot
examples/: apache_small_sample
lib_jars/jre_lib/: jar.binfmt
replication/: Dockerfile  notes
results/: java_cfg_small_sample_results.csv  simple_test_results.csv
results/actual/: apache_cfgs_small_sample_results.csv  java_cfg_small_sample_results.csv  simple_test_results.csv
results/expected/: apache_cfgs_small_sample_expected_results.csv  java_cfg_small_sample_expected_results.csv  simple_test_results_expected.csv
scripts/: apache_all  apache_small_sample  complexities  java_all  java_small_sample  simple_tests
scripts-py/: apache_all  compute_stats  java_all  java_small_sample  simple_tests
scripts/cfgextractor/: App.py  Classify.py  Log.py  Shell.py  main.py
src/: .coverage  .mypy.ini  .pylintrc  Command.py  Env.py  Graph.py  Log.py  Makefile  Metrics.py  Testing.sh  Utils.py  Utils2.py  __init__.py  aggregate_metrics.py  analyze.py  analyze_automatic.py  analyze_manual.py  analyze_metrics.py  analyze_new.py  benchmarkTesting.sh  chooseFile.txt  command.py  command_data.py  control_flow_graph.py  cyclo.csv  cyclomaticComplexity.m  data_collection.py  data_collection_bfs.csv  data_collection_full.csv  data_collection_full1.csv  data_collection_full4.csv  data_collection_full_unoptimized.csv  data_collection_old_taylor.csv  data_collection_taylor.csv.csv  data_collection_test.csv  echo  env.py  fixtestingbash.sh  graph.py  graphVisulizer.py  (+27 more)
src-py/: CppToDot.py  CyclomaticComplexity.py  Graph.py  NPathComplexity.py  Parameters.py  PathComplexity.py  Paths.py  Utils.py  cppToDot.py  cyclomaticComplexity.py  example.cpp  nPathComplexity.py  pathComplexity.py  paths.py  sampleRun.py  test.py  utils.py
src-py/testfiles/: example.cpp  graph2.dot  graph3.dot  graph4.dot  main_f.dot  test.txt
src/FlaskApp/: flask.py
src/PACKAGENAME.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/analyze/: analyze_automatic.py  analyze_loglog.py  analyze_manual.py
src/checkstylegraphs/: -281076981_getFirstNodeInsideForWhileDoWhileBlocks_0_basic_dot.dot  -281076981_getFirstNodeInsideTryCatchFinallyBlocks_0_basic_dot.dot  1985022238_checkTypeDefinition_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_AstTreeStringPrinter_printJavaAndJavadocTree_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_Checker_processFile_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_DetailAstImpl_addPreviousSibling_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_DetailAstImpl_setNextSibling_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavaParser_appendHiddenCommentNodes_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavadocDetailNodeParser_adjustFirstLineToJavadocIndent_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavadocDetailNodeParser_convertParseTreeToDetailNode_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavadocDetailNodeParser_convertUpperCamelToUpperUnderscore_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavadocDetailNodeParser_getMissedHtmlTag_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavadocDetailNodeParser_getNextSibling_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavadocDetailNodeParser_parseJavadocAsDetailNode_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavadocPropertiesGenerator_formatHtmlElement_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavadocPropertiesGenerator_formatInlineCodeTag_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavadocPropertiesGenerator_getClassBody_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavadocPropertiesGenerator_getFirstJavadocSentence_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavadocPropertiesGenerator_isPublicStaticFinalIntField_0_basic_dot.dot  com_puppycrawl_tools_checkstyle_JavadocPropertiesGenerator_iteratePublicStaticIntFields_0_basic_dot.dot  (+445 more)
src/config/: .mypy.ini  (+2 more)
src/tests/cFiles/benchmark/kleeversions/coreutils-6.11/tests/uniq/: 101-z.X  102-z.X  11-z.I  110-z.X  112-z.I  114-z.I  114-z.X  115-z.I  115-z.X  116-z.X  117-z.X  120-z.I  123.I  23-z.I  2z.X  3-z.I  31-z.I  32-z.I  34-z.I  34-z.X  35-z.I  35-z.X  3z.X  42-z.I  43-z.I  43-z.X  4z.X  51-z.I  51-z.X  52-z.X  55-z.X  5z.X  6-z.I  6-z.X  63-z.X  65-z.I  8-z.X  8.I  92-z.I  93-z.I  (+7 more)
utils/: changed_files.txt  convert_file_names.py
(+113858 files in other folders)
